# SunoMCP

./: README.md  pyproject.toml
.github/sync-reports/: 2026-07-15.md
.github/workflows/: publish.yml
core/: client.py  oauth.py  utils.py
tests/: test_audio_tools.py  test_client.py
tools/: audio_tools.py
vscode/: README.md
